--- a/index.html
+++ b/index.html
@@ -5,52 +5,49 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Weather-Dart</title>
   <link rel="stylesheet" href="weather-dart.css">
+  <script src="forecast.js" defer></script>
 </head>
 <body>
   <div class="container">
+
     <!-- Header / Intro -->
     <div class="header">
       <div class="header-icon">🎯</div>
       <h1>Weather-Dart</h1>
-      <p>Targeted Forecasts for Any Location & Time (coming soon)</p>
-      <p>CREATED BY: NEIL CURTIS LOVEST DUPREE (aka Cozmo the Magician) & his Lovely AI Assistant Luma</p>
-      <p>Date: <input type="date" id="date-input"></p>
-      <p>Lat/Lon: <span id="latlon">--</span></p>
-      <p>Address: <span id="address">--</span></p>
+      <p class="subtitle">Targeted Forecasts for Any Location & Time (coming soon)</p>
+      <p class="credit">CREATED BY: NEIL CURTIS LOVEST DUPREE (aka Cozmo the Magician) & his Lovely AI Assistant Luma</p>
+      <p>Date: <input type="date" id="date-field"></p>
+      <p>Lat/Lon: <span id="latlon">Loading...</span></p>
+      <p>Address: <span id="address">Loading...</span></p>
     </div>
 
     <!-- Input Section -->
     <div class="input-section">
-      <label for="address-input">Enter Address:</label>
-      <input type="text" id="address-input" placeholder="Optional">
-      <div class="toggle">
-        <label><input type="radio" name="location-source" value="latlon" checked> Use LAT/LON</label>
-        <label><input type="radio" name="location-source" value="address"> Use Address</label>
-      </div>
-    </div>
-
-    <!-- Tip Section -->
-    <div class="tip-section">
-      <button id="tip-button">Please Tip, Thank You</button>
-      <span id="tip-msg"></span>
-      <label><input type="checkbox" id="no-tip"> Not now, thank you</label>
+      <label>
+        <input type="radio" name="locChoice" value="latlon" checked> Use LAT/LON
+      </label>
+      <label>
+        <input type="radio" name="locChoice" value="address"> Use Address
+      </label>
+      <input type="text" id="manual-address" placeholder="Enter address manually">
     </div>
 
     <!-- Forecast Section -->
     <div class="forecast-section">
-      <button id="forecast-button">Get Luma Forecast</button>
-      <span class="instruction">PASTE INTO GPT WINDOW</span>
-      <pre id="luma-output"></pre>
-      <button id="copy-button">Copy</button>
+      <button id="get-forecast">Get Luma Forecast</button>
+      <span class="paste-instructions">PASTE INTO GPT WINDOW</span>
+      <pre id="forecast-box"></pre>
+      <button id="copy-forecast">Copy Forecast</button>
+      <div class="tip-container">
+        <button id="tip-button">Please Tip, Thank You</button>
+        <label><input type="checkbox" id="not-now"> Not now, thank you</label>
+      </div>
+      <div id="tip-message" class="tip-message"></div>
     </div>
 
-    <!-- QR Code -->
-    <div class="qr-section">
-      <canvas id="qr-canvas"></canvas>
-    </div>
+    <!-- QR Code Section -->
+    <div class="qr-section" id="qr-container"></div>
+
   </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.1/build/qrcode.min.js"></script>
-  <script src="forecast.js"></script>
 </body>
 </html>
